tests/TypeValidationTests/data/EmptyDefaultTest.xpl
node[] main() {
  integer x = 1;

  switch (x) {
  default:
  }
}
